exports[`Model reducers #TF_MUTATE_VALUE should mutate nested value 1`] = `
Object {
  "props": "oldProps",
  "user": Object {
    "firstname": "newName",
  },
}
`;

exports[`Model reducers #TF_MUTATE_VALUE should mutate simple value 1`] = `
Object {
  "props": "newProps",
  "user": Object {
    "firstname": "oldName",
  },
}
`;
